@@ -1,3 +1,6 @@
+Sigil v0.1.6 <ADD_DATE>
+    - fixed a regression that was causing crashes when switching views
+
 Sigil v0.1.5 2009.11.25
     - fixed a race condition with view syncing in Book View
     - fixed an issue with loading text files that don't end with a newline (some text would end up missing)
